[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attohttp"
version = "0.0.1"
authors = [{ name = "mikurei", email = "contact@mikurei.dev" }]
description = "Tiny HTTP client"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/mikurei/attohttp"
